--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<h1 id="logo"><a href="index.html">Moshir.dev</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="https://github.com/MoshirMoshir/moshirmoshir.github.io">The C0de</a></li>
 						</ul>
 					</nav>
 				</header>
