Added yet to carrots

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<div class="content">
 						<header>
 							<h2>Under Construction...</h2>
-							<p>No Carrots,<br />
+							<p>No Carrots yet,<br />
 							Just code. Lots of code.</p>
 						</header>
 						<span class="image"><img src="images/Carrot.png" alt="" /></span>
