added twitch embed in Media page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Moshir.dev</title>
+		<title>Moshir/dev</title>
 		<link rel="icon" href="images/Icon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -22,6 +22,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="https://github.com/MoshirMoshir/moshirmoshir.github.io">The C0de</a></li>
+							<li><a href="media.html">Media</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -179,8 +180,6 @@
 						<li><a href="https://www.reddit.com/user/Moshir_" class="icon brands alt fa-reddit-alien"><span class="label">Reddit</span></a></li>
 						<li><a href="https://twitter.com/moshirmoshir" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="mailto:moshir@manasys.org" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-						
-						<!-- <li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
 					</ul>
 					<ul class="copyright">
 						<li>&copy;ManaSys.org All rights reserved.</li>
