replaced rpvoid with webgl

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="https://github.com/MoshirMoshir/moshirmoshir.github.io">The C0de</a></li>
-							<li><a href="rpvoid.html">RPV</a></li>
+							<li><a href="webgl.html">WebGL</a></li>
 						</ul>
 					</nav>
 				</header>
