--- a/webgl.html
+++ b/webgl.html
@@ -18,14 +18,14 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="https://github.com/MoshirMoshir/moshirmoshir.github.io">The C0de</a></li>
-							<li><a href="rpvoid.html">RPV</a></li>
+							<li><a href="webgl.html">WebGL</a></li>
 						</ul>
 					</nav>
 				</header>
 
 			<!-- Banner -->
 				<section id="banner">
-					<embed src="https://rpvoid.com/" style="width:500px; height: 300px;">
+					<embed src="game.html" width="1920" height="1080">		
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</section>
 
