--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Moshir/game</title>
+    <title>Unity WebGL Player | Web Game</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -18,8 +18,9 @@
       </div>
       <div id="unity-warning"> </div>
       <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Fullscreen</div>
+        <div id="unity-build-title">Web Game</div>
       </div>
     </div>
     <script>
@@ -55,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGame.loader.js";
+      var loaderUrl = buildUrl + "/WebGameCompiled.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGame.data",
-        frameworkUrl: buildUrl + "/WebGame.framework.js",
-        codeUrl: buildUrl + "/WebGame.wasm",
+        dataUrl: buildUrl + "/WebGameCompiled.data",
+        frameworkUrl: buildUrl + "/WebGameCompiled.framework.js",
+        codeUrl: buildUrl + "/WebGameCompiled.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Web Game",
