--- a/game.html
+++ b/game.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGameCompiled.loader.js";
+      var loaderUrl = buildUrl + "/SimpleGameCompiled.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGameCompiled.data",
-        frameworkUrl: buildUrl + "/WebGameCompiled.framework.js",
-        codeUrl: buildUrl + "/WebGameCompiled.wasm",
+        dataUrl: buildUrl + "/SimpleGameCompiled.data",
+        frameworkUrl: buildUrl + "/SimpleGameCompiled.framework.js",
+        codeUrl: buildUrl + "/SimpleGameCompiled.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Web Game",
