--- a/webgl.html
+++ b/webgl.html
@@ -29,7 +29,7 @@
 						<head>
 							<meta charset="utf-8">
 							<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-							<title>SimpleGame</title>
+							<title>Moshir/game</title>
 							<link rel="shortcut icon" href="TemplateData/favicon.ico">
 							<link rel="stylesheet" href="TemplateData/style.css">
 						  </head>
@@ -44,6 +44,7 @@
 							  </div>
 							  <div id="unity-warning"> </div>
 							  <div id="unity-footer">
+								
 								<div id="unity-fullscreen-button"></div>
 								<div id="unity-build-title">Fullscreen</div>
 							  </div>
@@ -81,11 +82,11 @@
 							  }
 						
 							  var buildUrl = "Build";
-							  var loaderUrl = buildUrl + "/WebGameCompiled.loader.js";
+							  var loaderUrl = buildUrl + "/SimpleGameCompiled.loader.js";
 							  var config = {
-								dataUrl: buildUrl + "/WebGameCompiled.data",
-								frameworkUrl: buildUrl + "/WebGameCompiled.framework.js",
-								codeUrl: buildUrl + "/WebGameCompiled.wasm",
+								dataUrl: buildUrl + "/SimpleGameCompiled.data",
+								frameworkUrl: buildUrl + "/SimpleGameCompiled.framework.js",
+								codeUrl: buildUrl + "/SimpleGameCompiled.wasm",
 								streamingAssetsUrl: "StreamingAssets",
 								companyName: "DefaultCompany",
 								productName: "Web Game",
