Fixing and Editing a bunch of stuff

--- a/piano.html
+++ b/piano.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Moshir/dev</title>
+		<title>Moshir/piano</title>
 		<link rel="icon" href="images/Icon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -22,7 +22,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="https://github.com/MoshirMoshir/moshirmoshir.github.io">The C0de</a></li>
-							<li><a href="webgl.html">Games</a></li>
+							<li><a href="webgl.html">WebGL</a></li>
 							<li><a href="piano.html">Piano</a></li>
 						</ul>
 					</nav>
@@ -32,14 +32,24 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Under Construction...</h2>
-							<p>No Carrots yet,<br />
-							Just code. Lots of code.</p>
+							<h2>Piano Stuff</h2>
+							<p>Midis, Scores, and<br />
+							youtube videos.</p>
 						</header>
 						<span class="image"><img src="images/Carrot.png" alt="" /></span>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</section>
+
+				<div id="main" class="wrapper style1">
+					<div class="container">
+						<span class="image"><iframe width="420" height="315" src="https://www.youtube.com/embed/lXya6ujBq0c"></iframe></span><br />
+						<a href="/files/FallenDownRev1.mid" download>
+							Download Midi
+						</a>
+						<p> Sheets don't exist yet, srry <b> <3 </b></p>
+					</div>
+				</div>
 
 			<!-- <!- One ->
 				<section id="one" class="spotlight style1 bottom">
