--- a/HTML5 Examples/index.html
+++ b/HTML5 Examples/index.html
@@ -6,8 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Moshir/dev</title>
-		<link rel="icon" href="images/Icon.png">
+		<title>Landed by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,12 +17,29 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Moshir.dev</a></h1>
+					<h1 id="logo"><a href="index.html">Landed</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="https://github.com/MoshirMoshir/moshirmoshir.github.io">The C0de</a></li>
-							<li><a href="webgl.html">Games</a></li>
-							<li><a href="piano.html">Piano</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li>
+								<a href="#">Layouts</a>
+								<ul>
+									<li><a href="left-sidebar.html">Left Sidebar</a></li>
+									<li><a href="right-sidebar.html">Right Sidebar</a></li>
+									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li>
+										<a href="#">Submenu</a>
+										<ul>
+											<li><a href="#">Option 1</a></li>
+											<li><a href="#">Option 2</a></li>
+											<li><a href="#">Option 3</a></li>
+											<li><a href="#">Option 4</a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li><a href="elements.html">Elements</a></li>
+							<li><a href="#" class="button primary">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -32,16 +48,16 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Under Construction...</h2>
-							<p>No Carrots yet,<br />
-							Just code. Lots of code.</p>
+							<h2>The future has landed</h2>
+							<p>And there are no hoverboards or flying cars.<br />
+							Just apps. Lots of mother flipping apps.</p>
 						</header>
-						<span class="image"><img src="images/Carrot.png" alt="" /></span>
+						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
-					<a href="#footer" class="goto-next scrolly">Next</a>
+					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- <!- One ->
+			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
 					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
@@ -73,7 +89,7 @@
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!- Two ->
+			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
@@ -89,7 +105,7 @@
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!- Three ->
+			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
@@ -105,7 +121,7 @@
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!- Four ->
+			<!-- Four -->
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
@@ -154,7 +170,7 @@
 					</div>
 				</section>
 
-			<!- Five ->
+			<!-- Five -->
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
@@ -168,22 +184,20 @@
 							</div>
 						</form>
 					</div>
-				</section> -->
+				</section>
 
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="https://discord.com/users/333013440211976193" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>	
-						<li><a href="https://steamcommunity.com/id/moshirmoshir/" class="icon brands alt fa-steam"><span class="label">Steam</span></a></li>
-						<li><a href="https://github.com/MoshirMoshir" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="https://www.youtube.com/channel/UCIt3Oe3qG-pyD7fOiNVgN9g" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a> </a></li>
-						<li><a href="https://www.twitch.tv/moshirmoshir" class="icon brands alt fa-twitch"><span class="label">Twitch</span></a></li>
-						<li><a href="https://www.reddit.com/user/Moshir_" class="icon brands alt fa-reddit-alien"><span class="label">Reddit</span></a></li>
-						<li><a href="https://twitter.com/moshirmoshir" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="mailto:moshir@manasys.org" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy;ManaSys.org All rights reserved.</li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
