Fixed Image to Video and size

--- a/piano.html
+++ b/piano.html
@@ -43,7 +43,7 @@
 
 				<div id="main" class="wrapper style1">
 					<div class="container">
-						<span class="image"><iframe width="420" height="315" src="https://www.youtube.com/embed/lXya6ujBq0c"></iframe></span><br />
+						<iframe width="420" height="230" src="https://www.youtube.com/embed/lXya6ujBq0c"></iframe><br />
 						<a href="/files/FallenDownRev1.mid" download>
 							Download Midi
 						</a>
