--- a/webgl.html
+++ b/webgl.html
@@ -20,7 +20,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="https://github.com/MoshirMoshir/moshirmoshir.github.io">The C0de</a></li>
-							<li><a href="webgl.html">WebGL</a></li>
+							<li><a href="webgl.html">Games</a></li>
 							<li><a href="piano.html">Piano</a></li>
 						</ul>
 					</nav>
