--- a/webgl.html
+++ b/webgl.html
@@ -22,6 +22,7 @@
 							<li><a href="https://github.com/MoshirMoshir/moshirmoshir.github.io">The C0de</a></li>
 							<li><a href="webgl.html">Games</a></li>
 							<li><a href="piano.html">Piano</a></li>
+							<li><a href="fireworks.html">Fireworks</a></li>
 						</ul>
 					</nav>
 				</header>
