--- a/test.html
+++ b/test.html
@@ -78,9 +78,9 @@
 							  var buildUrl = "Build";
 							  var loaderUrl = buildUrl + "/Platformer.loader.js";
 							  var config = {
-								dataUrl: buildUrl + "/Platformer.data.br",
-								frameworkUrl: buildUrl + "/Platformer.framework.js.br",
-								codeUrl: buildUrl + "/Platformer.wasm.br",
+								dataUrl: buildUrl + "/Platformer.data",
+								frameworkUrl: buildUrl + "/Platformer.framework.js",
+								codeUrl: buildUrl + "/Platformer.wasm",
 								streamingAssetsUrl: "StreamingAssets",
 								companyName: "DefaultCompany",
 								productName: "Platformer",
