--- a/webgl.html
+++ b/webgl.html
@@ -81,14 +81,14 @@
 							}
 						
 							var buildUrl = "Build";
-							  var loaderUrl = buildUrl + "/SimpleGameCompiled.loader.js";
+							  var loaderUrl = buildUrl + "/Platformer.loader.js";
 							  var config = {
-								dataUrl: buildUrl + "/SimpleGameCompiled.data",
-								frameworkUrl: buildUrl + "/SimpleGameCompiled.framework.js",
-								codeUrl: buildUrl + "/SimpleGameCompiled.wasm",
+								dataUrl: buildUrl + "/Platformer.data",
+								frameworkUrl: buildUrl + "/Platformer.framework.js",
+								codeUrl: buildUrl + "/Platformer.wasm",
 								streamingAssetsUrl: "StreamingAssets",
 								companyName: "DefaultCompany",
-								productName: "Web Game",
+								productName: "Platformer",
 								productVersion: "1.0",
 								showBanner: unityShowBanner,
 							};
