--- a/webgl.html
+++ b/webgl.html
@@ -148,7 +148,7 @@
 					</div>
 				</section>
 			
-			<!-- Footer -->
+			<!-- Footer 
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="https://discord.com/users/333013440211976193" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>	
@@ -163,7 +163,7 @@
 				<ul class="copyright">
 					<li>&copy;ManaSys.org All rights reserved.</li>
 				</ul>
-			</footer>
+			</footer>-->
 
 
 		</div>
