--- a/fireworks.html
+++ b/fireworks.html
@@ -24,8 +24,8 @@
                 <h1 id="logo"><a href="index.html">Moshir.dev</a></h1>
                 <nav id="nav">
                     <ul>
-                        <li><a href="https://github.com/MoshirMoshir/moshirmoshir.github.io">The C0de</a></li>
-                        <li><a href="webgl.html">Games</a></li>
+                        <li><a href="https://github.com/MoshirMoshir/moshirmoshir.github.io">Source Code</a></li>
+                        <li><a href="games.html">Games</a></li>
                         <li><a href="piano.html">Piano</a></li>
                         <li><a href="fireworks.html">Fireworks</a></li>
                     </ul>
@@ -38,7 +38,7 @@
         <!-- partial:index.partial.html -->
         <canvas id=c></canvas>
         <!-- partial -->
-        <script  src="./script.js"></script>
+        <script  src="assets/js/fireworks.js"></script>
 
     </body>
 </html>
