Fixed typo and headers

--- a/games.html
+++ b/games.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Moshir/webgl</title>
+		<title>Moshir/games</title>
 		<link rel="icon" href="images/Icon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
