--- a/games.html
+++ b/games.html
@@ -42,16 +42,19 @@
 									<li><a href="tutorial.html" ><img src="images/tutorial.png" alt="Tutorial" class="image fit"/></a></li>
 								</ul>
 								<h2><a href="tutorial.html"><u>Tutorial</u></a></h2>
-								<p>This is literally a <a href="https://youtu.be/b8YUfee_pzc">tutorial</a> I followed pretty much line by line to try to become more familiar with Unity.</p>
+								<p>
+									This is literally a <a href="https://youtu.be/b8YUfee_pzc">tutorial</a> I followed pretty much line by line 
+									to try to become more familiar with Unity.
+								</p>
 							</div>
 							<div class="col-4 col-12-medium">
 								<ul class="actions">
-									<li><a href="platformer.html" ><img src="images/Platformer.png" alt="Platformer" class="image fit"/></a></li>
+									<li><a href="platformer.html" ><img src="images/platformer.png" alt="Platformer" class="image fit"/></a></li>
 								</ul>
 								<h2><a href="platformer.html"><u>Platformer</u></a></h2>
 								<p>
-									A game I made with all the assets completely from scratch by yours truly. As of writing, you can run around and collect 3 coins (with sound effects and animation!) 
-									May add more content/features in the future. Mainly played around with coding in unity and making my own assets.
+									A game I made with all the assets completely from scratch by yours truly. As of writing, you can run around and collect 3 coins 
+									(with sound effects and animation!) May add more content/features in the future. Mainly played around with coding in unity and making my own assets.
 								</p>
 							</div>
 							<div class="col-4 col-12-medium">
