--- a/games.html
+++ b/games.html
@@ -53,8 +53,8 @@
 								</ul>
 								<h2><a href="platformer.html"><u>Platformer</u></a></h2>
 								<p>
-									A game I made with all the assets completely from scratch by yours truly. As of writing, you can run around and collect 3 coins 
-									(with sound effects and animation!) May add more content/features in the future. Mainly played around with coding in unity and making my own assets.
+									A scene I made while learning how to make my own assets. As of writing, you can run around and collect 3 coins 
+									(with sound effects and animation!) But was mainly for me to play around with coding in unity and making my own assets.
 								</p>
 							</div>
 							<div class="col-4 col-12-medium">
@@ -63,8 +63,8 @@
 								</ul>
 								<h2><a href="https://moshir.itch.io/terragrow"><u>Terragrow</u></a></h2>
 								<p>
-									My first game jam! Terragrow was made across 3 days with 18 hours of actually working on the game! Made in collaboration with my friend who did all sound and music from scratch while 
-									I did all the art and coding. Turned out much better than I could have ever hoped, especially comparing to the majority of submissions lol.
+									My first game jam! Terragrow was made across 3 days with 18 hours of actually working on the game! Made in collaboration with my friend who did all sound and music while 
+									I did all the art and coding. Turned out much better than I could have ever hoped, especially for a first playable game.
 								</p>
 							</div>
 						</div>
