--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 		<link rel="icon" href="images/Icon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!-- Meta data for Discord and embeds -->
+		<meta content="Moshir.dev" property="og:title" />
+		<meta content="Moshir's personal website. No Carrots yet, just code. Lots of code." property="og:description" />
+		<meta content="https://moshir.dev/" property="og:url" />
+		<meta content="images/Carrot.png" property="og:image" />
+		<meta content="#5bd27f" data-react-helmet="true" name="theme-color" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
