fixing metadata image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta content="Moshir.dev" property="og:title" />
 		<meta content="Moshir's personal website. No Carrots yet, just code. Lots of code." property="og:description" />
 		<meta content="https://moshir.dev/" property="og:url" />
-		<meta content="images/Carrot.png" property="og:image" />
+		<meta src="images/Carrot.png" property="og:image" />
 		<meta content="#5bd27f" data-react-helmet="true" name="theme-color" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
