--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
 		<meta content="Moshir.dev" property="og:title" />
 		<meta content="Moshir's personal website. No Carrots yet, just code. Lots of code." property="og:description" />
 		<meta content="https://moshir.dev/" property="og:url" />
-		<meta src="images/Carrot.png" property="og:image" />
+		<meta content="<%= require('./images/Carrot.png') %>" property="og:image" />
 		<meta content="#5bd27f" data-react-helmet="true" name="theme-color" />
+		<!--
+		<meta name="twitter:title" content="Moshir.dev">
+		<meta name="twitter:description" content="Cool description">
+		<meta name="twitter:image" content="<%= require('./images/Carrot.png') %>">
+		<meta name="twitter:card" content="<%= require('./images/Carrot.png') %>">
+		-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
