--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 		<meta content="https://moshir.dev/" property="og:url" />
 		<meta content="<%= require('./images/Carrot.png') %>" property="og:image" />
 		<meta content="#5bd27f" data-react-helmet="true" name="theme-color" />
-		<!--
+		<!-- Meta data for twitter and embeds -->
 		<meta name="twitter:title" content="Moshir.dev">
 		<meta name="twitter:description" content="Cool description">
 		<meta name="twitter:image" content="<%= require('./images/Carrot.png') %>">
 		<meta name="twitter:card" content="<%= require('./images/Carrot.png') %>">
-		-->
+
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
