fixing metadata image path

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta content="Moshir.dev" property="og:title" />
 		<meta content="Moshir's personal website. No Carrots yet, just code. Lots of code." property="og:description" />
 		<meta content="https://moshir.dev/" property="og:url" />
-		<meta content="http://localhost/images/Carrot.png" property="og:image" />
+		<meta content="images/Carrot.png" property="og:image" />
 		<meta content="#5bd27f" data-react-helmet="true" name="theme-color" />
 		<!-- Meta data for twitter and embeds 
 		<meta name="twitter:title" content="Moshir.dev">
