fixed metadata image paths

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
 		<link rel="icon" href="images/Icon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!-- Meta data for Discord and embeds -->
-		<meta content="Moshir.dev" property="og:title" />
-		<meta content="Moshir's personal website. No Carrots yet, just code. Lots of code." property="og:description" />
-		<meta content="https://moshir.dev/" property="og:url" />
-		<meta content="images/Carrot.png" property="og:image" />
-		<meta content="#5bd27f" data-react-helmet="true" name="theme-color" />
-		<!-- Meta data for twitter and embeds -->
+		<!-- Meta data for Discord-->
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Moshir.dev" />
+		<meta property="og:url" content="https://moshir.dev/" />
+		<meta property="og:image" content="https://moshir.dev/images/Carrot.png" />
+		<meta property="og:description" content="Moshir's personal website. No Carrots yet, just code. Lots of code."  />
+		<meta name="theme-color" content="#5bd27f" data-react-helmet="true" />
+		<!-- Meta data for twitter-->
 		<meta name="twitter:title" content="Moshir.dev">
-		<meta name="twitter:description" content="Cool description">
-		<meta name="twitter:image" content="images/Carrot.png">
-		<meta name="twitter:card" content="images/Carrot.png">
+		<meta property="twitter:url" content="https://moshir.dev/" />
+		<meta name="twitter:card" content="https://moshir.dev/images/Carrot.png">
+		<meta name="twitter:image" content="https://moshir.dev/images/Carrot.png">
+		<meta name="twitter:description" content="Moshir's personal website. No Carrots yet, just code. Lots of code.">
 		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
