--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!-- Meta data for Discord-->
+		<meta name="og:site_name" content="Moshir.dev" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Moshir.dev" />
 		<meta property="og:url" content="https://moshir.dev/" />
