--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="icon" href="images/Icon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!-- Meta data for Discord-->
+		<!-- Meta data for Discord
 		<meta name="og:site_name" content="Moshir.dev" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Moshir.dev" />
@@ -18,6 +18,7 @@
 		<meta property="og:image" content="https://moshir.dev/images/Carrot.png" />
 		<meta property="og:description" content="Moshir's personal website. No Carrots yet, just code. Lots of code."  />
 		<meta name="theme-color" content="#5bd27f" data-react-helmet="true" />
+		-->
 		<!-- Meta data for twitter-->
 		<meta name="twitter:title" content="Moshir.dev">
 		<meta property="twitter:url" content="https://moshir.dev/" />
