--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
 		<link rel="icon" href="images/Icon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!-- Meta data for Discord
-		<meta name="og:site_name" content="Moshir.dev" />
+		<!-- Meta data for Discord (twitter works better)
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Moshir.dev" />
 		<meta property="og:url" content="https://moshir.dev/" />
 		<meta property="og:image" content="https://moshir.dev/images/Carrot.png" />
 		<meta property="og:description" content="Moshir's personal website. No Carrots yet, just code. Lots of code."  />
-		<meta name="theme-color" content="#5bd27f" data-react-helmet="true" />
 		-->
-		<!-- Meta data for twitter-->
+		<!-- Meta data for discord-->
 		<meta name="twitter:title" content="Moshir.dev">
 		<meta property="twitter:url" content="https://moshir.dev/" />
 		<meta name="twitter:card" content="https://moshir.dev/images/Carrot.png">
 		<meta name="twitter:image" content="https://moshir.dev/images/Carrot.png">
 		<meta name="twitter:description" content="Moshir's personal website. No Carrots yet, just code. Lots of code.">
+		<meta name="theme-color" content="#5bd27f" data-react-helmet="true" />
 		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
